@@ -1,3 +1,7 @@
+2001-03-23  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.m4 (AM_WITH_NLS): Check for bison and set INTLBISON.
+
 2001-03-20  Bruno Haible  <haible@clisp.cons.org>
 
 	* iconv.m4 (AM_ICONV): Recommend GNU libiconv.
