@@ -1,3 +1,7 @@
+2001-03-23  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.in (YACC): Use @INTLBISON@ instead of bison.
+
 2001-03-21  Bruno Haible  <haible@clisp.cons.org>
 
 	* dcigettext.c (_nl_state_lock): Mark as #ifdef _LIBC. AIX 3 xlc
